--- a/wact/index.html
+++ b/wact/index.html
@@ -1,105 +1,131 @@
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weatheract</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script src="bower_components/modernizr/modernizr.js"></script>
-  </head>
-  <body>
+</head>
 
-<div class="top">   
-    <div class="row">
-        <div class="small-2 large-2 columns padlogo">
-            <img class="logo" src="svg/logo.svg" alt="Weatheract Logo">
-        </div>
-        <div class="small-10 large-6 columns"> 
-            <h1>YOU KNOW THE WEATHER</h1>
-            <h2>WE SUGGEST THE ACTIVITIES</h2>
-        </div>
-        <div class="busqueda">
-            <div class="small-9 large-3 columns entry">
-                <input type="text" placeholder="City, State, Country...">
-            </div>
-            <div class="small-3 large-2 columns">   
-                <a href="#" class="alert button tiny">Search</a>
-            </div>
-        </div>
-    </div>
-</div>
+<body>
 
-<div class="weather">
-    <div class="row" id="weatherbg">
-            <div class="small-12 large-6 columns" id="wtinfo">
-                <p id="location"><strong>Miami, Florida. United States</strong></p>
-                <p id="temperature">84 ºF / 29ºC</p>
-                <p id="date">SUN Sep 20th, 2015 10:00 a.m.</p>
-                <p id="precipitation"><strong>Precipitation:</strong> 35%</p>
-                <p id="humidity"><strong>Humidity:</strong> 70%</p>
-                <p id="wind"><strong>Wind Speed:</strong> 10 mph</p>
-                <p id="maxmin"><strong>Max:</strong> 92ºF <strong> Min:</strong> 75ºF</p>
+    <div class="top">
+        <div class="row small-collapse">
+
+            <!--Logo-Slogan-->
+            <div class="small-12 medium-8 medium-centered large-8 large-uncentered columns">
+                <div class="row">
+                    <div class="small-2 large-2 columns header-parent">
+                        <img class="logo header-child" src="svg/logo.svg" alt="Weatheract Logo">
+                    </div>
+
+                    <div class="small-10 large-10 columns header-parent">
+                        <div class="header-child">
+                            <h1>YOU KNOW THE WEATHER</h1>
+                            <h2>WE SUGGEST THE ACTIVITIES</h2>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="small-12 large-6 columns">
-                <img class="weathericon" src="svg/sunny.svg" alt="Weatheract Sunny">
+
+            <!--Searchbar-->
+            <div class="small-12 medium-8 medium-centered large-4 large-uncentered columns">
+                <div class="row">
+                    <div class="small-8 columns header-parent">
+                        <input class="entry header-child" type="text" placeholder="City, State, Country...">
+                    </div>
+
+                    <div class="small-4 columns header-parent">
+                        <a href="#" class="alert button tiny header-child">Search</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-<div class="nextdays">
-    <div class="row" id="nextdaysinfo">
-        <div>
-            <div class="small-1 large-1 columns days">MON</div>
-            <div class="small-1 large-1 columns days">TUE</div>
-            <div class="small-1 large-1 columns days">WED</div>
-            <div class="small-1 large-1 columns days">THR</div>
-            <div class="small-1 large-1 columns days">FRI</div>
-            <div class="small-1 large-1 columns days">SAT</div>
-            <div class="small-1 large-1 columns days">SUN</div>
-            <div class="small-1 large-1 columns days">MON</div>
-            <div class="small-1 large-1 columns days">TUE</div>
-            <div class="small-1 large-1 columns days">WED</div>
-            <div class="small-1 large-1 columns days">THR</div>
-            <div class="small-1 large-1 columns days">FRI</div>
+    <div class="weather">
+        <div class="row small-collapse">
+            <div class="columns small-12">
+                <div class="row" id="weatherbg">
+                    <div class=" small-12 large-7 columns" id="wtinfo">
+                        <p id="location"><strong>Miami, Florida. United States</strong></p>
+                        <p id="temperature">84 ºF / 29ºC</p>
+                        <p id="date">SUN Sep 20th, 2015 10:00 a.m.</p>
+                        <p id="precipitation"><strong>Precipitation:</strong> 35%</p>
+                        <p id="humidity"><strong>Humidity:</strong> 70%</p>
+                        <p id="wind"><strong>Wind Speed:</strong> 10 mph</p>
+                        <p id="maxmin"><strong>Max:</strong> 92ºF <strong> Min:</strong> 75ºF</p>
+                    </div>
+                    <div class="small-12 large-5 columns width-div">
+                        <img class="weathericon" src="svg/sunny.svg" alt="Weatheract Sunny">
+                    </div>
+                </div>
+            </div>
         </div>
-        <div>
-            <div class="small-1 large-1 columns tempmax">92ºF</div>
-            <div class="small-1 large-1 columns tempmax">92ºF</div>
-            <div class="small-1 large-1 columns tempmax">92ºF</div>
-            <div class="small-1 large-1 columns tempmax">92ºF</div>
-            <div class="small-1 large-1 columns tempmax">92ºF</div>
-            <div class="small-1 large-1 columns tempmax">92ºF</div>
-            <div class="small-1 large-1 columns tempmax">92ºF</div>
-            <div class="small-1 large-1 columns tempmax">92ºF</div>
-            <div class="small-1 large-1 columns tempmax">92ºF</div>
-            <div class="small-1 large-1 columns tempmax">92ºF</div>
-            <div class="small-1 large-1 columns tempmax">92ºF</div>
-            <div class="small-1 large-1 columns tempmax">92ºF</div>
+    </div>
+
+    <div class="nextdays">
+        <div class="row small-collapse">
+            <div class="columns small-12">
+                <div class="row" id="nextdaysinfo">
+                    <div>
+                        <div class="small-1 large-1 columns days">MON</div>
+                        <div class="small-1 large-1 columns days">TUE</div>
+                        <div class="small-1 large-1 columns days">WED</div>
+                        <div class="small-1 large-1 columns days">THR</div>
+                        <div class="small-1 large-1 columns days">FRI</div>
+                        <div class="small-1 large-1 columns days">SAT</div>
+                        <div class="small-1 large-1 columns days">SUN</div>
+                        <div class="small-1 large-1 columns days">MON</div>
+                        <div class="small-1 large-1 columns days">TUE</div>
+                        <div class="small-1 large-1 columns days">WED</div>
+                        <div class="small-1 large-1 columns days">THR</div>
+                        <div class="small-1 large-1 columns days">FRI</div>
+                    </div>
+                    <div>
+                        <div class="small-1 large-1 columns tempmax">92ºF</div>
+                        <div class="small-1 large-1 columns tempmax">92ºF</div>
+                        <div class="small-1 large-1 columns tempmax">92ºF</div>
+                        <div class="small-1 large-1 columns tempmax">92ºF</div>
+                        <div class="small-1 large-1 columns tempmax">92ºF</div>
+                        <div class="small-1 large-1 columns tempmax">92ºF</div>
+                        <div class="small-1 large-1 columns tempmax">92ºF</div>
+                        <div class="small-1 large-1 columns tempmax">92ºF</div>
+                        <div class="small-1 large-1 columns tempmax">92ºF</div>
+                        <div class="small-1 large-1 columns tempmax">92ºF</div>
+                        <div class="small-1 large-1 columns tempmax">92ºF</div>
+                        <div class="small-1 large-1 columns tempmax">92ºF</div>
+                    </div>
+                    <div>
+                        <div class="small-1 large-1 columns tempmin">75ºF</div>
+                        <div class="small-1 large-1 columns tempmin">75ºF</div>
+                        <div class="small-1 large-1 columns tempmin">75ºF</div>
+                        <div class="small-1 large-1 columns tempmin">75ºF</div>
+                        <div class="small-1 large-1 columns tempmin">75ºF</div>
+                        <div class="small-1 large-1 columns tempmin">75ºF</div>
+                        <div class="small-1 large-1 columns tempmin">75ºF</div>
+                        <div class="small-1 large-1 columns tempmin">75ºF</div>
+                        <div class="small-1 large-1 columns tempmin">75ºF</div>
+                        <div class="small-1 large-1 columns tempmin">75ºF</div>
+                        <div class="small-1 large-1 columns tempmin">75ºF</div>
+                        <div class="small-1 large-1 columns tempmin">75ºF</div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div>
-            <div class="small-1 large-1 columns tempmin">75ºF</div>
-            <div class="small-1 large-1 columns tempmin">75ºF</div>
-            <div class="small-1 large-1 columns tempmin">75ºF</div>
-            <div class="small-1 large-1 columns tempmin">75ºF</div>
-            <div class="small-1 large-1 columns tempmin">75ºF</div>
-            <div class="small-1 large-1 columns tempmin">75ºF</div>
-            <div class="small-1 large-1 columns tempmin">75ºF</div>
-            <div class="small-1 large-1 columns tempmin">75ºF</div>
-            <div class="small-1 large-1 columns tempmin">75ºF</div>
-            <div class="small-1 large-1 columns tempmin">75ºF</div>
-            <div class="small-1 large-1 columns tempmin">75ºF</div>
-            <div class="small-1 large-1 columns tempmin">75ºF</div>
-        </div>
-    </div>    
-</div>
-  
-<footer>
-    <p>Weatheract © All rights reserved 2015.<br><img class="social" src="img/socialmedia.png" alt="Social></p> Media"></p>
-</footer>
-<p class="by">By: Lina Angel</p>
+    </div>
+
+    <footer>
+        <span class="copyright">Weatheract © All rights reserved 2015.</span>
+        <img class="social" src="img/socialmedia.png" alt="Social">
+    </footer>
+    <p class="by">By: Lina Angel</p>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="js/app.js"></script>
-  </body>
+</body>
+
 </html>
